[package]
name = "intermezzos"
version = "0.1.0"
authors = ["Syed Faraaz Ahmad <faraaz98@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
